# open-wal

./: CLAUDE.md  Cargo.toml  README.md
.github/: actionlint.yaml
.github/workflows/: bench.yml  ci.yml  fuzz.yml  lazyfs.yml  loom.yml  m8-dmflakey.yml  m8-h1.yml  m8-macos.yml  m8.yml  soak.yml
benches/: wal.rs
docs/: m8-infra-plan.md  m8-runbook.md  wal_design_v6.md
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/recovery/: seed_lcg_200  seed_lcg_32
fuzz/fuzz_targets/: decode.rs  model.rs  recovery.rs  structure.rs
scripts/: README.md  lazyfs-gate.sh  perf-gate.sh
scripts/m8/: dirfsync-presence.sh  dm-flakey.sh  evidence.sh  fsync-fault.sh  h1-cycle.sh  power-pull.sh  storage-check.sh
scripts/m9/: soak.sh
src/: config.rs  crc.rs  error.rs  lib.rs  lsn.rs  observer.rs  reader.rs  record.rs  recovery.rs  segment.rs  wal.rs
tests/: checkpoint_property.rs  differential.rs  fsync_fault_gate.rs  lazyfs_gate.rs  loom_publish.rs  macos_fullfsync.rs  model_oracle.rs  multi_segment_property.rs  process_crash.rs  reader.rs  recovery_corruption.rs  recovery_multi_segment.rs  recovery_resurrection.rs  recovery_truncation.rs  sealed_immutability.rs  single_segment.rs  soak.rs  ui.rs  zero_alloc.rs
tests/common/: mod.rs
tests/fault/: eio_preload.c
tests/model/: mod.rs
tests/ui/: wal_not_sync.rs  wal_not_sync.stderr
