[package]
name = "open-wal"
version = "0.1.0"
edition = "2024"
# Minimum supported Rust version: the floor implied by edition 2024. No feature
# beyond this is used; bump deliberately if a later milestone needs a newer API.
rust-version = "1.85"
description = "An embedded Write-Ahead Log (WAL) library for Rust."
license = "BSD-3-Clause"
repository = "https://github.com/guyo13/open-wal"
readme = "README.md"

[dependencies]
# Castagnoli CRC-32C (hardware-accelerated, software fallback). NOT crc32fast,
# which uses the ISO-HDLC/zlib polynomial (§5, §16 of docs/wal_design_v6.md).
crc32c = "0.6"
# Filesystem syscalls the durability contract needs (§16): fallocate
# (pre-allocation), fsync (file + directory), flock (exclusive writer lock),
# and fcntl(F_FULLFSYNC) for macOS durability (§8.3). Positioned reads/writes
# and sync_data come from std; rustix covers what std does not expose.
rustix = { version = "1", features = ["fs"] }

[dev-dependencies]
# Generative property testing (§16 suggests proptest or bolero). In M1 this
# covers the record codec (round-trip, padding-in-CRC, bounded decode). The
# libFuzzer/cargo-fuzz decoder target (§14.5 F2) is deferred to M9; until then
# proptest is the generative coverage and D11 is not yet fuzz-hardened.
proptest = "1"
# Temp directories for the M2 write/read integration tests.
tempfile = "3"
# `O_NONBLOCK`/`ENXIO` constants for the LazyFS gate's faults-FIFO open
# (`tests/lazyfs_gate.rs`) — a non-blocking open fails fast if the daemon is down
# rather than hanging CI. Test-only; the library proper depends on `rustix`, not
# `libc`. Already present transitively, so this adds no new crate.
libc = "0.2"
