[package]
name = "open-wal"
version = "0.1.0"
edition = "2024"
# Minimum supported Rust version: the floor implied by edition 2024. No feature
# beyond this is used; bump deliberately if a later milestone needs a newer API.
rust-version = "1.85"
description = "An embedded Write-Ahead Log (WAL) library for Rust."
license = "BSD-3-Clause"
repository = "https://github.com/guyo13/open-wal"
readme = "README.md"
# `src/bin/crash_child.rs` is a test-only helper spawned by
# `tests/process_crash.rs` (§14.4a). It is built locally/in CI for the tests but
# MUST NOT ship to crates.io consumers, so exclude it from the published package.
# (Excluding only affects packaging; local `cargo test` still builds the bin.)
exclude = ["src/bin"]

[features]
# Test-only NEGATIVE CONTROL for §14.4d (M8): build the writer to deliberately
# OMIT the directory fsync after a segment roll, so the rolled segment's filename
# is not made durable. The detector lives in the M8 metadata-fault harness
# (`scripts/m8/dm-flakey.sh dirfsync-negative`): the correct build (without this
# feature) must PASS recovery after a roll + simulated power loss, and the inject
# build (with it) must FAIL (the filename was never durable). LazyFS cannot model
# this (data-only faults; it persists a `create` immediately), which is why §14.4d
# was deferred from M4 to M8's dm-flakey/power-pull tooling. NEVER enable in a real
# build. See docs/m8-runbook.md §14.4d.
inject_no_dir_fsync = []

[dependencies]
# Castagnoli CRC-32C (hardware-accelerated, software fallback). NOT crc32fast,
# which uses the ISO-HDLC/zlib polynomial (§5, §16 of docs/wal_design_v6.md).
crc32c = "0.6"
# Filesystem syscalls the durability contract needs (§16): fallocate
# (pre-allocation), fsync (file + directory), flock (exclusive writer lock),
# and fcntl(F_FULLFSYNC) for macOS durability (§8.3). Positioned reads/writes
# and sync_data come from std; rustix covers what std does not expose.
rustix = { version = "1", features = ["fs"] }

[dev-dependencies]
# Generative property testing (§16 suggests proptest or bolero). In M1 this
# covers the record codec (round-trip, padding-in-CRC, bounded decode). The
# libFuzzer/cargo-fuzz decoder target (§14.5 F2) is deferred to M9; until then
# proptest is the generative coverage and D11 is not yet fuzz-hardened.
proptest = "1"
# Temp directories for the M2 write/read integration tests.
tempfile = "3"
# `O_NONBLOCK`/`ENXIO` constants for the LazyFS gate's faults-FIFO open
# (`tests/lazyfs_gate.rs`) — a non-blocking open fails fast if the daemon is down
# rather than hanging CI. Test-only; the library proper depends on `rustix`, not
# `libc`. Already present transitively, so this adds no new crate.
libc = "0.2"
# §14.7 benchmarks (`benches/wal.rs`). `harness = false` (below) lets the bench
# own `main` via criterion's macros. `default-features = false` drops the
# `plotters`/`rayon` HTML-report stack we don't use — keeps the dev-dep tree lean.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
# HdrHistogram for the commit-latency tail percentiles (p50/p99/p999). Criterion
# only reports point estimates (mean/median), not arbitrary percentiles (§14.7),
# so the commit-latency group records per-iteration timings here and emits the
# tails itself.
hdrhistogram = "7"

# §14.7 perf benches. `harness = false` ⇒ criterion provides `main`. NIGHTLY/manual
# tier (§14.11); per-PR CI only compile-checks them (`cargo bench --no-run`).
[[bench]]
name = "wal"
harness = false
